Add login & main page structure

--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,8 @@
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
+     <link rel="stylesheet" href="styles/login.css">
+     <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="monarcPocApp">
@@ -20,7 +22,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <!--<div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -45,17 +47,19 @@
           </div>
         </div>
       </div>
-    </div>
+    </div>-->
 
     <div class="container">
     <div ng-view=""></div>
     </div>
 
+    <!--
     <div class="footer">
       <div class="container">
         <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
       </div>
     </div>
+    -->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
