--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,9 @@
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/login/controllers/login.js"></script>
+        <script src="scripts/login/services/login-api.js"></script>
+        <script src="scripts/main/controllers/main.js"></script>
+        <script src="scripts/main/services/jobs-api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
