Integrate oders and recover pass + make Layout login

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
      <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="monarcPocApp">
+  <body ng-app="monarcPocApp" class="full">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -92,8 +92,11 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/login/controllers/login.js"></script>
         <script src="scripts/login/services/login-api.js"></script>
-        <script src="scripts/main/controllers/main.js"></script>
-        <script src="scripts/main/services/jobs-api.js"></script>
+        <script src="scripts/jobs/controllers/jobs.js"></script>
+        <script src="scripts/jobs/services/jobs-api.js"></script>
+        <script src="scripts/recoverpass/controllers/recoverpass.js"></script>
+        <script src="scripts/orders/controllers/orders.js"></script>
+        <script src="scripts/orders/services/orders-api.js"></script>
         <!-- endbuild -->
 </body>
 </html>
