Add job view layout

--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
      <link rel="stylesheet" href="styles/login.css">
+     <link rel="stylesheet" href="styles/jobs.css">
      <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
