--- a/app/index.html
+++ b/app/index.html
@@ -14,53 +14,16 @@
     <link rel="stylesheet" href="styles/main.css">
      <link rel="stylesheet" href="styles/login.css">
      <link rel="stylesheet" href="styles/jobs.css">
+     <link rel="stylesheet" href="styles/orders.css">
      <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
   <body ng-app="monarcPocApp" class="full">
-    <!--[if lte IE 8]>
-      <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-    <![endif]-->
-
-    <!-- Add your site or application content here -->
-    <!--<div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-
-            <a class="navbar-brand" href="#/">monarcPoc</a>
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </div>-->
 
     <div class="container">
     <div ng-view=""></div>
     </div>
 
-    <!--
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
-      </div>
-    </div>
-    -->
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
