Add services for recover pass & form

--- a/app/index.html
+++ b/app/index.html
@@ -58,9 +58,13 @@
         <script src="scripts/login/services/login-api.js"></script>
         <script src="scripts/jobs/controllers/jobs.js"></script>
         <script src="scripts/jobs/services/jobs-api.js"></script>
+        <script src="scripts/recoverpass/services/recover.js"></script>
         <script src="scripts/recoverpass/controllers/recoverpass.js"></script>
         <script src="scripts/orders/controllers/orders.js"></script>
         <script src="scripts/orders/services/orders-api.js"></script>
+        <script src="scripts/form/controllers/form.js"></script>
+        <script src="scripts/form/services/form.js"></script>
+
         <!-- endbuild -->
 </body>
 </html>
