Add logout and recoverpass layout

--- a/app/index.html
+++ b/app/index.html
@@ -15,6 +15,7 @@
      <link rel="stylesheet" href="styles/login.css">
      <link rel="stylesheet" href="styles/jobs.css">
      <link rel="stylesheet" href="styles/orders.css">
+     <link rel="stylesheet" href="styles/recoverpass.css">
      <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
@@ -64,6 +65,7 @@
         <script src="scripts/orders/services/orders-api.js"></script>
         <script src="scripts/form/controllers/form.js"></script>
         <script src="scripts/form/services/form.js"></script>
+        <script src="scripts/partial/controllers/header.js"></script>
 
         <!-- endbuild -->
 </body>
