--- a/app/index.html
+++ b/app/index.html
@@ -16,6 +16,7 @@
      <link rel="stylesheet" href="styles/jobs.css">
      <link rel="stylesheet" href="styles/orders.css">
      <link rel="stylesheet" href="styles/recoverpass.css">
+     <link rel="stylesheet" href="styles/form.css">
      <link rel="stylesheet" href="lib/dataTables.bootstrap.min.css">
     <!-- endbuild -->
   </head>
