--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,7 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/services/user.js"></script>
         <script src="scripts/login/controllers/login.js"></script>
         <script src="scripts/login/services/login-api.js"></script>
         <script src="scripts/jobs/controllers/jobs.js"></script>
